<resources>
    <string name="app_name">MBookie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_desc">Log in to your account to book\nyour favourite movie.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="foret_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="register_here">Register Here</string>
    <string name="register">Register</string>
    <string name="new_account">New Account</string>
    <string name="open_an_account_to_explore_more_nmovies_and_book_for_ticket">Open an account to explore more\nmovies and book for ticket!</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_continuing_you_have_read_and_agreed_to_mbookie_s">By continuing, you have read and agreed to MBookie’s</string>
    <string name="terms_policy">Terms &amp; Policy.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="forgot">Forgot</string>
    <string name="forgot_password_desc">Enter your email below to reset your password\nand we will send you a reset link.</string>
    <string name="submit">Submit</string>
    <string name="check_in_your_mail">Check in Your Mail !</string>
    <string name="just_mailed">We just emailed emailed you with the instructions\nto reset your password.</string>
    <string name="home">Home</string>
    <string name="movie">Movie</string>
    <string name="booking">Booking</string>
    <string name="profile">Profile</string>
    <string name="add_movie">Add Movie</string>
    <string name="next">Next</string>
    <string name="upload_movie_ncover">Upload Movie\nCover</string>
    <string name="movie_title">Movie title</string>
    <string name="select_genre">Select Genre</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="select_movie_category">Select Movie Category</string>
    <string name="duration">Duration</string>
    <string name="release_date">Release Date</string>
    <string name="censorship">Censorship</string>
    <string name="trailer_link">Trailer Link</string>
    <string name="description">Description</string>
    <string name="enter_genre">Enter Genre</string>
    <string name="create_genre">Create Genre</string>
    <string name="select_cinema">Select Cinema</string>
    <string name="create_cinema">Create Cinema</string>
    <string name="enter_cinema_name">Enter Cinema Name</string>
    <string name="total_number_of_seat">Total Number of Seat</string>
    <string name="address">Address</string>
    <string name="language">Language</string>
    <string name="movie_list">Movie List</string>
    <string name="set_up_showtime">Set Up Show</string>
    <string name="manage_cinema">Manage Cinema</string>
    <string name="cinema_showtimes">Cinema Showtimes</string>
    <string name="selected_cinema">Selected cinema</string>
    <string name="select_time">Select time</string>
    <string name="showtimes">Showtimes</string>
    <string name="available_cinema">Available Cinema</string>
    <string name="add_cinema">Add cinema</string>
    <string name="add_new_showtime">Add new showtime</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome</string>
    <string name="hi_user">Hi, %1$s</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_all">See all</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="genre">Genre</string>
</resources>