<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_black"
    tools:context=".login_register.presentation.ui.fragment.ForgetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <ImageView
            android:id="@+id/ivBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="6dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="3dp"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llRegisterAccount"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/clToolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/forgot"
            android:textSize="46sp"
            android:textColor="@color/green"
            android:fontFamily="@font/inter_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="-10dp"
            android:text="@string/password"
            android:textSize="46sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/forgot_password_desc"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:focusable="true"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/edittext_box_color"
            app:boxStrokeWidth="1.5dp"
            app:boxStrokeWidthFocused="1.5dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/text_grey_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:hint="@string/example_gmail_com"
                android:textColorHint="@color/text_grey_color"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/inter_bold"
            android:paddingVertical="15dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>