<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_black"
    android:orientation="vertical"
    tools:context=".login_register.presentation.ui.fragment.LoginFragment">

    <LinearLayout
        android:id="@+id/llBody"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivAppLogo"
            android:layout_width="210dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="95dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_desc"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="65dp"
            android:clickable="true"
            android:focusable="true"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/edittext_box_color"
            app:boxStrokeWidth="1.5dp"
            app:boxStrokeWidthFocused="1.5dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/text_grey_color"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:hint="@string/email"
                android:nextFocusDown="@id/etPassword"
                android:textColorHint="@color/text_grey_color"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:textColorHint="@color/text_grey_color"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/edittext_box_color"
            app:boxStrokeWidth="1.5dp"
            app:boxStrokeWidthFocused="1.5dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/text_grey_color"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"
                android:hint="@string/password"
                android:textColorHint="@color/text_grey_color"
                android:textSize="14sp"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="14sp"
            android:fontFamily="@font/inter_semibold"
            android:paddingStart="15dp"
            android:paddingBottom="5dp"
            android:text="@string/foret_password"
            android:textColor="@color/green"
            android:textSize="14sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/inter_bold"
                android:paddingVertical="15dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ProgressBar
                tools:visibility="visible"
                android:visibility="gone"
                android:id="@+id/progress_load"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                style="?android:attr/progressBarStyleLarge"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:indeterminateTintMode="src_in"
                app:layout_constraintTop_toTopOf="@id/mbLogin"
                app:layout_constraintBottom_toBottomOf="@id/mbLogin"
                app:layout_constraintEnd_toEndOf="@id/mbLogin"
                app:layout_constraintStart_toStartOf="@id/mbLogin"/>

        </androidx.constraintlayout.widget.ConstraintLayout>




    </LinearLayout>


    <LinearLayout
        android:id="@+id/llRegisterHere"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="bottom"
            android:text="@string/new_user"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/inter_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_gravity="bottom"
            android:layout_marginStart="5dp"
            android:text="@string/register_here"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:fontFamily="@font/inter_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>