<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/llCategory"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="14dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvMovieCategory"
            tools:text="@string/now_playing"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/inter_medium"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/llSeeAllNowPlaying"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingVertical="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tvSeeAllNowPlaying"
                android:text="@string/see_all"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:fontFamily="@font/inter_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/ic_forward_arrow"
                android:layout_marginStart="3dp"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:contentDescription="@string/app_name" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recMovieList"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/llCategory"
        tools:listitem="@layout/customer_movie_item_card"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>